SERVER-61005 rs.initiate() fails with "Invariant failure" under specific startup options